# deepfix

./: .gitignore  README.md  pyproject.toml
dev-plan/: ArtifactAnalysis.md  CrossArtifactIntegrationAgent.md  OptimizationAdvisorAgent.md  TrainingArtifactsAnalyzerAgent.md  agentic-system.md  implementation-plan.md  knowledgebridge-priorities.md  knowledgebridge.md  project-description.md
examples/: dataset_analysis.ipynb  dataset_analysis.py
specs/: README.md  data-contracts.md  service-spec.md  workflow-spec.md
src/deepfix/: __init__.py  __main__.py
src/deepfix/cli/: __init__.py  commands.py  main.py
src/deepfix/client/: client.py  config.py  facades.py
src/deepfix/client/data/: __init__.py  datasets.py  utils.py
src/deepfix/client/integrations/: __init__.py  deepchecks.py  mlflow.py
src/deepfix/client/pipelines/: base.py  checks.py  factory.py  loaders.py  loggers.py
src/deepfix/client/zoo/datasets/: deepchecks_nlp.py  deepchecks_tabular.py  deepchecks_vision.py
src/deepfix/core/: config.py
src/deepfix/core/advisor/: __init__.py  errors.py  orchestrator.py  result.py
src/deepfix/core/agents/: __init__.py  artifact_analyzers.py  base.py  coordinator.py  coordinators.py  cross_artifact_reasoning.py  facades.py  knowledge_bridge.py  models.py  signatures.py  training_dynamics.py  training_dynamics_utils.py
src/deepfix/core/artifacts/: __init__.py  datamodel.py  manager.py  repository.py
src/deepfix/core/data/: loader.py  utils.py
src/deepfix/core/knowledge_base/: manager.py
src/deepfix/core/pipelines/: __init__.py  checks.py  data_ingestion.py  factory.py  loaders.py  loggers.py  query.py
src/deepfix/core/prompt_builders/: base.py  config.py  dataset_prompt.py  deepchecks_prompt.py  prompt_builder.py
src/deepfix/core/query/: __init__.py
src/deepfix/core/query/intelligence/: __init__.py  client.py  models.py
src/deepfix/core/query/intelligence/providers/: __init__.py  base.py
src/deepfix/core/query/intelligence/providers/coding_agent/: __init__.py
src/deepfix/core/query/intelligence/providers/coding_agent/cursor/: __init__.py  cursor.py  errors.py  process.py
src/deepfix/core/query/intelligence/providers/llm/: __init__.py  dspy.py
src/deepfix/core/query/knowledgebase/: kb.py
src/deepfix/integrations/: __init__.py  lightning.py  mlflow.py
src/deepfix/server/: api.py  config.py  coordinators.py  models.py
src/deepfix/server/agents/: artifact_analyzers.py  base.py  cross_artifact_reasoning.py  signatures.py  training_dynamics_utils.py
src/deepfix/server/prompt_builders/: base.py  dataset_prompt.py  deepchecks_prompt.py  prompt_builder.py  training_prompt.py
src/deepfix/shared/: models.py
tests/: conftest.py  test_deepchecks_dataloaders.py  test_deepchecks_runners.py
